--- a/resources/objects.yaml
+++ b/resources/objects.yaml
@@ -1,32 +1,27 @@
 ---
 objects:
+  boundingBox:
+    width: 500
+    height: 500
+    color: gray
   smallSquare:
     nodes:
-      - x: 0
-        y: 0
-      - x: 0
-        y: 10
-      - x: 10
-        y: 10
-      - x: 10
-        y: 0 
+      - [0, 0]
+      - [0, 50]
+      - [50, 50]
+      - [50, 0]
+    color: red
   largeSquare:
     nodes:
-      - x: 0
-        y: 0
-      - x: 0
-        y: 20
-      - x: 20
-        y: 20
-      - x: 20
-        y: 0
+      - [0, 0]
+      - [0, 70]
+      - [70, 70]
+      - [70, 0]
+    color: green
   rectangle:
     nodes:
-      - x: 0
-        y: 0
-      - x: 0
-        y: 10
-      - x: 20
-        y: 10
-      - x: 20
-        y: 0 
+      - [0, 0]
+      - [0, 50]
+      - [70, 50]
+      - [70, 0]
+    color: orange
