--- a/resources/objects.yaml
+++ b/resources/objects.yaml
@@ -4,19 +4,18 @@ objects:
     width: 500
     height: 500
     color: gray
-  smallSquare:
+  square:
     nodes:
       - [0, 0]
       - [0, 50]
       - [50, 50]
       - [50, 0]
     color: red
-  largeSquare:
+  triangle:
     nodes:
       - [0, 0]
       - [0, 70]
       - [70, 70]
-      - [70, 0]
     color: green
   rectangle:
     nodes:
